Spring Boot, Hibernate JPA, REST CRUD, PostgreSQL, JavaScript_SinglePage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #jdbc.url
 spring.datasource.url=jdbc:postgresql://localhost:5432/resttest
 
-#jdbc.username=postgres
+#jdbc.username
 spring.datasource.username=postgres
 
-#jdbc.password=postgres
+#jdbc.password
 spring.datasource.password=postgres
 
 jdbc.pool.initialSize=1
